@@ -22,7 +22,6 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.jdbc.core.JdbcTemplate;
 
 import java.time.LocalDate;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -62,7 +61,7 @@ public class BarnUnder18AarRepositoryTest {
         final UnleashService unleashService = mock(UnleashService.class);
         when(unleashService.isEnabled(anyString())).thenReturn(true);
         this.barnUnder18AarRepository = new BarnUnder18AarRepository(db, db);
-        this.barnUnder18AarService = new BarnUnder18AarService(barnUnder18AarRepository);
+        this.barnUnder18AarService = new BarnUnder18AarService(barnUnder18AarRepository, mockedPdlPortefoljeClient);
         this.pdlPersonRepository = new PdlPersonRepository(db, null);
 
         db.update("TRUNCATE bruker_identer");
@@ -84,7 +83,7 @@ public class BarnUnder18AarRepositoryTest {
         pdlIdentRepository.upsertIdenter(identerBruker);
         Mockito.when(mockedPdlPortefoljeClient.hentBrukerBarnDataBolkFraPdl(List.of(fnrBarn))).thenReturn(Map.of(fnrBarn, pdlBarn15Aar()));
 
-        barnUnder18AarService.lagreBarnOgForeldreansvar(fnrPerson, Map.of(fnrBarn, pdlBarn15Aar()), Collections.emptyList());
+        barnUnder18AarService.lagreBarnOgForeldreansvar(fnrPerson, List.of(fnrBarn));
         Map<Fnr, List<BarnUnder18AarData>> forelderBarnMap = barnUnder18AarService.hentBarnUnder18Aar(List.of(fnrPerson));
         Assertions.assertFalse(forelderBarnMap.isEmpty());
         Assertions.assertEquals(15, (int) forelderBarnMap.get(fnrPerson).get(0).getAlder());
@@ -100,8 +99,8 @@ public class BarnUnder18AarRepositoryTest {
         pdlPersonRepository.upsertPerson(foresatt2, new PDLPerson().setKjonn(M).setFoedsel(LocalDate.now()));
         Mockito.when(mockedPdlPortefoljeClient.hentBrukerBarnDataBolkFraPdl(List.of(fnrBarn))).thenReturn(Map.of(fnrBarn, pdlBarn()));
 
-        barnUnder18AarService.lagreBarnOgForeldreansvar(foresatt1, Map.of(fnrBarn, pdlBarn()), Collections.emptyList());
-        barnUnder18AarService.lagreBarnOgForeldreansvar(foresatt2, Map.of(fnrBarn, pdlBarn()), Collections.emptyList());
+        barnUnder18AarService.lagreBarnOgForeldreansvar(foresatt1, List.of(fnrBarn));
+        barnUnder18AarService.lagreBarnOgForeldreansvar(foresatt2, List.of(fnrBarn));
         Map<Fnr, List<BarnUnder18AarData>> forelderBarnMap = barnUnder18AarService.hentBarnUnder18Aar(List.of(foresatt1, foresatt2));
         Assertions.assertEquals(2, forelderBarnMap.size());
         Assertions.assertEquals(forelderBarnMap.get(foresatt1), forelderBarnMap.get(foresatt2));
@@ -132,7 +131,7 @@ public class BarnUnder18AarRepositoryTest {
         Mockito.when(mockedPdlPortefoljeClient.hentBrukerBarnDataBolkFraPdl(List.of(fnrBarn))).thenReturn(Map.of(fnrBarn, pdlBarn15Aar()));
         pdlPersonRepository.upsertPerson(fnrPerson, new PDLPerson().setKjonn(K).setFoedsel(LocalDate.now()));
         pdlIdentRepository.upsertIdenter(identerBruker);
-        barnUnder18AarService.lagreBarnOgForeldreansvar(fnrPerson, Map.of(fnrBarn, pdlBarn15Aar()), Collections.emptyList());
+        barnUnder18AarService.lagreBarnOgForeldreansvar(fnrPerson, List.of(fnrBarn));
 
         boolean erFnrBarnAvForelderUnderOppfolging = barnUnder18AarService.erFnrBarnAvForelderUnderOppfolging(List.of(fnrBarn));
         Assertions.assertTrue(erFnrBarnAvForelderUnderOppfolging);
@@ -175,7 +174,7 @@ public class BarnUnder18AarRepositoryTest {
         pdlPersonRepository.upsertPerson(fnrPerson, new PDLPerson().setKjonn(K).setFoedsel(LocalDate.now()));
         pdlIdentRepository.upsertIdenter(identerBruker);
         Mockito.when(mockedPdlPortefoljeClient.hentBrukerBarnDataBolkFraPdl(List.of(fnrBarn))).thenReturn(Map.of(fnrBarn, pdlBarn15Aar()));
-        barnUnder18AarService.lagreBarnOgForeldreansvar(fnrPerson, Map.of(fnrBarn, pdlBarn15Aar()), Collections.emptyList());
+        barnUnder18AarService.lagreBarnOgForeldreansvar(fnrPerson, List.of(fnrBarn));
 
         Fnr nyFnr = randomFnr();
         barnUnder18AarRepository.oppdatereBarnIdent(nyFnr, List.of(fnrBarn, randomFnr()));
@@ -204,9 +203,9 @@ public class BarnUnder18AarRepositoryTest {
         pdlPersonRepository.upsertPerson(fnrPerson, new PDLPerson().setKjonn(K).setFoedsel(LocalDate.now()));
         pdlIdentRepository.upsertIdenter(identerBruker);
         Mockito.when(mockedPdlPortefoljeClient.hentBrukerBarnDataBolkFraPdl(List.of(fnrBarn1, fnrBarn2))).thenReturn(Map.of(fnrBarn1, pdlBarn15Aar(), fnrBarn2, pdlBarn4Aar()));
-        barnUnder18AarService.lagreBarnOgForeldreansvar(fnrPerson, Map.of(fnrBarn1, pdlBarn15Aar(), fnrBarn2, pdlBarn4Aar()), Collections.emptyList());
+        barnUnder18AarService.lagreBarnOgForeldreansvar(fnrPerson, List.of(fnrBarn1, fnrBarn2));
 
-        barnUnder18AarService.lagreBarnOgForeldreansvar(fnrPerson, Map.of(fnrBarn2, pdlBarn4Aar()), Collections.emptyList());
+        barnUnder18AarService.lagreBarnOgForeldreansvar(fnrPerson, List.of(fnrBarn2));
         List<Fnr> barnFnrs = barnUnder18AarService.hentBarnFnrsForForeldre(List.of(fnrPerson));
 
         Assertions.assertEquals(1, barnFnrs.size());
